# doc-extractor

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
annotations/epc_certificate/gemini-2.5-flash-preview-05-20/: DE-Muster-Energieausweis2.json  EPC in Dutch.json  EPC in French.json  EPC_Certificate_Austria_1.json  EPC_Certificate_Austria_10.json  EPC_Certificate_Austria_2.json  EPC_Certificate_Austria_3.json  EPC_Certificate_Austria_4.json  EPC_Certificate_Austria_5.json  EPC_Certificate_Austria_6.json  EPC_Certificate_Austria_7.json  EPC_Certificate_Austria_8.json  EPC_Certificate_Austria_9.json  EPC_Certificate_Dutch_1.json  EPC_Certificate_Dutch_2.json  EPC_Certificate_Dutch_3.json  EPC_Certificate_Dutch_4.json  EPC_Certificate_Dutch_5.json  EPC_Certificate_French_1.json  EPC_Certificate_French_2.json  EPC_Certificate_French_3.json  EPC_Certificate_French_4.json  EPC_Certificate_French_5.json  Energie Certificaat.json
annotations/epc_certificate/gemini-2.5-pro-preview-05-06/: DE-Muster-Energieausweis2.json  EPC in Dutch.json  EPC in French.json  EPC_Certificate_Austria_1.json  EPC_Certificate_Austria_10.json  EPC_Certificate_Austria_2.json  EPC_Certificate_Austria_4.json  EPC_Certificate_Austria_5.json  EPC_Certificate_Austria_6.json  EPC_Certificate_Austria_7.json  EPC_Certificate_Austria_8.json  EPC_Certificate_Austria_9.json  EPC_Certificate_Dutch_1.json  (+9 more)
src/app/: app.py
src/benchmark/: evaluate_predictions.py  generate_predictions.py
src/config/: logger.py  prompts.py  schema.py  settings.py
src/pipelines/: doc_extraction.py  utils.py
(+119 files in other folders)
