[project]
name = "doc-extractor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyterlab>=4.4.2",
    "langchain>=0.3.25",
    "langchain-openai>=0.1.0",
    "langchain-google-genai>=0.1.0",
    "pypdf>=4.0.0",
    "PyMuPDF>=1.24.0",
    "Pillow>=10.0.0",
    "pydantic-settings>=2.9.1",
    "ruff>=0.11.10",
    "seaborn>=0.13.2",
    "streamlit>=1.45.1",
    "watchdog>=6.0.0",
    "loguru>=0.7.3",
]
